@@ -44,12 +44,11 @@ time_zone = Pacific/Auckland
 [UploadToCPAN]
 
 [Prereq]
-Moose = 0.89
+Moose = 0.90
 MooseX::Types::Moose = 0.19
 MooseX::Types = 0.19
 namespace::autoclean = 0.08
 Search::GIN = 0.03
-MooseX::AttributeHelpers = 0.21
 Test::More = 0.92
 aliased = 0.30
 
