@@ -5,8 +5,7 @@ package Search::GIN::Extract::ClassMap;
 
 # ABSTRACT: Delegate Extraction based on class.
 
-use Moose;
-use MooseX::AttributeHelpers;
+use Moose 0.90;
 use Search::GIN::Extract::ClassMap::Types qw( :all );
 use aliased 'Search::GIN::Extract::ClassMap::Isa'  => 'CMIsa';
 use aliased 'Search::GIN::Extract::ClassMap::Does' => 'CMDoes';
